# tinyBitNet

./: CMakeLists.txt  README.md  haiku_subset.jsonl  run_tinybitnet.sh  run_tinybitnet_tests.sh  script.py
include/: autograd.hpp  block.hpp  tensor.hpp
include/abstract/: baseLinear.hpp
include/components/: attention.hpp  bitLinear.hpp  embedding.hpp  layerNorm.hpp  linear.hpp
include/criterion/: crossEntropy.hpp  mse.hpp
include/cuda/: cudaOps.hpp  kernels.hpp
include/data/: tensor.hpp
include/layers/: attention.hpp  embedding.hpp  feedForward.hpp  layerNorm.hpp  linear.hpp  optimizer.hpp
include/models/: feedForward.hpp  transformer.hpp  transformerBlock.hpp
include/optimizer/: optimizer.hpp
src/: block.cpp  main.cpp  tensor.cpp  tokenizer.cpp
src/components/: attention.cpp  bitLinear.cpp  embedding.cpp  layerNorm.cpp  linear.cpp
src/cuda/: cudaOps.cu  kernels.cpp  kernels.cu
src/cuda/kernels/: add.cu  binarize.cu  gelu.cu  matmul.cu  relu.cu  scale.cu  slice.cu  softmax.cu  transpose.cu  utility.cuh
src/data/: tensor.cpp  tensorGPU.cpp
src/dataset/: haikus.txt
src/layers/: attention.cpp  embedding.cpp  feedForward.cpp  layerNorm.cpp  linear.cpp
src/models/: feedForward.cpp  transformer.cpp  transformerBlock.cpp
tests/: test_embedding.cpp  test_linear.cpp
